fix: Bug fixed for text overflow in detail page editable WI Title (#931)

--- a/src/app/work-item/work-item-detail/work-item-detail.component.scss
+++ b/src/app/work-item/work-item-detail/work-item-detail.component.scss
@@ -67,6 +67,7 @@
     }
     .detail-title-edit {
       min-height: em(25);
+      height: auto;
       margin: 0;
       line-height: 1.5;
     }
